objects/LLC_BI__Treasury_Service__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Overdraft_Consent__c</fullName>
        <description>This picklist field is populated during the deposit account opening process. This field indicates the decision made by the customer to either request or refuse institution overdraft services that include and cover overdraft activity on ATM and everyday debit card transactions as part of standard overdraft services. The statement that reflects the customer&apos;s decision will be preceded by an X to indicate the selection. The statement not selected is preceded by a short line segment. The picklist value options are: 1/ Request overdraft service on ATM and everyday debit card transactions; and 2/ Refuse overdraft service on ATM and everyday debit card transactions.</description>
        <label>Overdraft Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request overdraft service</fullName>
                </value>
                <value>
                    <fullName>Refuse overdraft service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Emboss_Name__c</fullName>
        <description>An administrator or the system populates this text field to add a primary embossed name to their debit card.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the primary name that displays on the debit card.</inlineHelpText>
        <label>Primary Emboss Name</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Treasury Services</relationshipLabel>
        <relationshipName>Treasury_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reason_for_Suspend_Cancel__c</fullName>
        <description>Reason that a Treasury Service is suspended or cancelled</description>
        <label>Reason for Suspend/Cancel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Technical Requirements</fullName>
                </value>
                <value>
                    <fullName>Client Resource Availability</fullName>
                </value>
                <value>
                    <fullName>Current Provider Delay</fullName>
                </value>
                <value>
                    <fullName>Service No Longer Needed</fullName>
                </value>
                <value>
                    <fullName>Vendor Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reconciliation_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reconciliation Service</label>
        <referenceTo>LLC_BI__Reconciliation_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remote_Deposit_Capture_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remote Deposit Capture Service</label>
        <referenceTo>LLC_BI__Remote_Deposit_Capture_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reporting_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Service</label>
        <referenceTo>LLC_BI__Reporting_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is automatically populated and ties the treasury service to the scenario that it originated from.</description>
        <label>Scenario</label>
        <referenceTo>LLC_BI__Scenario__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secondary_Emboss_Name__c</fullName>
        <description>An administrator or the system populates this text field to add a secondary embossed name to their debit card.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the secondary name that displays on the debit card.</inlineHelpText>
        <label>Secondary Emboss Name</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sweep_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sweep Service</label>
        <referenceTo>LLC_BI__Sweep_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TM_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TM Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Wire_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wire Service</label>
        <referenceTo>LLC_BI__Wire_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Zero_Balance_Account_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zero Balance Account Service</label>
        <referenceTo>LLC_BI__Zero_Balance_Account_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The service number is an external, unique key for this service.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Treasury Service Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <description>VV-Created this field to test data load process</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Proforma__c</fullName>
        <formula>If (

ISBLANK(LLC_BI__Scenario__c), &quot;No Proforma Available&quot;,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)) + &quot;/&quot; + LLC_BI__Scenario__c, &quot;View&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proforma</label>
        <type>Text</type>
    </fields>
    <label>Treasury Service</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Wire_Services</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>LLC_BI__Product_Reference__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Wire_Service__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Wire Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LV_Compliance_Review</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>LLC_BI__Product_Reference__c</columns>
        <columns>CF_Treasury_Sales_Officer__c</columns>
        <columns>CF_Treasury_Sales_Specialist__c</columns>
        <columns>CF_Compliance_Review_Status__c</columns>
        <columns>CF_Compliance_Reviewer__c</columns>
        <columns>CF_Compliance_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CF_Compliance_Review_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Rejected</value>
        </filters>
        <filters>
            <field>CF_Compliance_Review_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Onboarding</value>
        </filters>
        <label>Compliance Review</label>
    </listViews>
    <listViews>
        <fullName>LV_Financial_Review_Needed</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>LLC_BI__Product_Reference__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CF_Treasury_Sales_Officer__c</columns>
        <columns>CF_Credit_Analyst__c</columns>
        <columns>CF_Financial_Review_Status__c</columns>
        <columns>CF_Credit_Recommendation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Financial_Review_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CF_Financial_Review_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>CF_Products__c</field>
            <operation>equals</operation>
            <value>ACH Credit Origination,ACH Debit Origination,Third Party Sender</value>
        </filters>
        <label>Financial Review Needed</label>
    </listViews>
    <listViews>
        <fullName>LV_My_Treasury_Services</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>NAME</columns>
        <columns>CF_Sub_Stage__c</columns>
        <columns>CF_Date_Order_Entry_Completed__c</columns>
        <columns>CF_Install_Date_Time__c</columns>
        <columns>CF_Treasury_Sales_Officer__c</columns>
        <columns>CF_Treasury_Sales_Specialist__c</columns>
        <columns>CF_Treasury_Support_Specialist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Sales,Onboarding,Fulfillment</value>
        </filters>
        <filters>
            <field>CF_Treasury_Support_Specialist__c</field>
            <operation>equals</operation>
            <value>$USER</value>
        </filters>
        <filters>
            <field>CF_Treasury_Sales_Officer__c</field>
            <operation>equals</operation>
            <value>$USER</value>
        </filters>
        <filters>
            <field>CF_Treasury_Sales_Specialist__c</field>
            <operation>equals</operation>
            <value>$USER</value>
        </filters>
        <label>My Treasury Services</label>
    </listViews>
    <listViews>
        <fullName>LV_Products_Requiring_Exposure_Validation</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>CF_Treasury_Sales_Officer__c</columns>
        <columns>CF_Region__c</columns>
        <columns>LLC_BI__Branch__c</columns>
        <columns>CF_Next_Treasury_Review_Date__c</columns>
        <columns>CF_Last_Treasury_Review_Date__c</columns>
        <columns>CF_Treasury_Risk_Rating__c</columns>
        <columns>LLC_BI__Product_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Product_Reference__c</field>
            <operation>equals</operation>
            <value>Third Party Sender,ACH Credit Origination,ACH Debit Origination,Low Speed RDC,High Speed RDC,Retail Lockbox,Remote Lockbox,I-Collect Portal,U-Pay Portal,Mobile RDC</value>
        </filters>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Onboarding</value>
        </filters>
        <filters>
            <field>CF_Is_Next_Review_less_than_Install_Date__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Products Requiring Exposure Validation</label>
    </listViews>
    <listViews>
        <fullName>LV_Treasury_Quality_Control</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>CF_Install_Date_Time__c</columns>
        <columns>CF_Sub_Stage__c</columns>
        <columns>CF_QC_Reviewer__c</columns>
        <columns>CF_QC_Review_Date__c</columns>
        <columns>CF_Error_1_Found__c</columns>
        <columns>CF_Error_2_Found__c</columns>
        <columns>CF_Error_3_Found__c</columns>
        <columns>CF_Treasury_Sales_Officer__c</columns>
        <columns>CF_Treasury_Support_Specialist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Sub_Stage__c</field>
            <operation>equals</operation>
            <value>Quality Control</value>
        </filters>
        <label>Treasury Quality Control</label>
        <sharedTo>
            <role>Operations_Specialist</role>
            <role>Ops_Support_Manager</role>
            <role>SVP_Treasury_Solutions</role>
            <role>Support_Rep_Tim_Granger</role>
            <role>Treasury_Sales_Officers</role>
            <role>Treasury_Sales_Specialist</role>
            <role>Treasury_Support_Specialist</role>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Treasury Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CVR_Maintenance_Request_Initiation</fullName>
        <active>true</active>
        <description>This VR restrict certain treasury services from being initiated for maintenance based on stage &amp; status value.</description>
        <errorConditionFormula>AND(
ISCHANGED(LLC_BI__Is_Under_Maintenance__c),
LLC_BI__Is_Under_Maintenance__c = true,

OR(

NOT(ISPICKVAL(LLC_BI__Stage__c , &apos;Servicing&apos;)),

AND(
ISPICKVAL(LLC_BI__Status__c , &apos;Complete&apos;),
ISPICKVAL(CF_Request_Type__c, &apos;Cancelled&apos;))
)
)</errorConditionFormula>
        <errorMessage>The Treasury Service record is not ready for maintenance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_Onboarding_Stage_movement_check</fullName>
        <active>true</active>
        <description>VR fires if Treasury Service limit(s) or Deposit Value is equal to zero(0) and updating Stage to Onboarding.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Open&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),

OR(

AND(
OR( LLC_BI__Product_Reference__r.Name = &apos;ACH Credit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;ACH Debit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Third Party Sender&apos;
),
OR( ISBLANK(CF_Corporate_ACH_Exposure_Value__c), CF_Corporate_ACH_Exposure_Value__c = 0) 
),

AND(
OR( LLC_BI__Product_Reference__r.Name = &apos;I-Collect Portal&apos;,
LLC_BI__Product_Reference__r.Name = &apos;U-Pay Portal&apos;
),
OR( ISBLANK(CF_Requested_ACH_Limit__c), CF_Requested_ACH_Limit__c = 0)
),

AND(
OR( LLC_BI__Product_Reference__r.Name = &apos;High Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Low Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Mobile RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Retail Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Remote Lockbox&apos;
),
OR( ISBLANK(CF_Daily_Deposit_Amount__c), CF_Daily_Deposit_Amount__c = 0)
)

)

)</errorConditionFormula>
        <errorMessage>Please update the Treasury Service limit(s) or Deposit Value before advancing to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_QC_Error1_Description_is_Required</fullName>
        <active>true</active>
        <description>Error 1 Description needs to be populated when Error 1 Found is selected as Other.</description>
        <errorConditionFormula>AND(
ISPICKVAL(CF_Error_1_Found__c, &apos;Other&apos;),
ISBLANK (CF_Error_1_Description__c)
)</errorConditionFormula>
        <errorDisplayField>CF_Error_1_Description__c</errorDisplayField>
        <errorMessage>Error 1 Description is required when Error 1 Found is Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_QC_Error2_Description_is_Required</fullName>
        <active>true</active>
        <description>Error 1 Description needs to be populated when Error 2 Found is selected as Other.</description>
        <errorConditionFormula>AND(
ISPICKVAL(CF_Error_2_Found__c, &apos;Other&apos;),
ISBLANK (CF_Error_2_Description__c)
)</errorConditionFormula>
        <errorDisplayField>CF_Error_2_Description__c</errorDisplayField>
        <errorMessage>Error 2 Description is required when Error 2 Found is Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_QC_Error3_Description_is_Required</fullName>
        <active>true</active>
        <description>Error 1 Description needs to be populated when Error 2 Found is selected as Other.</description>
        <errorConditionFormula>AND(
ISPICKVAL(CF_Error_3_Found__c, &apos;Other&apos;),
ISBLANK (CF_Error_3_Description__c)
)</errorConditionFormula>
        <errorDisplayField>CF_Error_3_Description__c</errorDisplayField>
        <errorMessage>Error 3 Description is required when Error 3 Found is Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_RDC_Missing_Info</fullName>
        <active>true</active>
        <description>Ensure RDC has needed data before sub-stage change</description>
        <errorConditionFormula>AND(
 $User.No_Validation__c = false,
 OR(
  ISPICKVAL(CF_Products__c, &apos;High Speed RDC&apos;),
  ISPICKVAL(CF_Products__c, &apos;Low Speed RDC&apos;),
  ISPICKVAL(CF_Products__c, &apos;Mobile RDC&apos;),
  ISPICKVAL(CF_Products__c, &apos;Remote Lockbox&apos;),
  ISPICKVAL(CF_Products__c, &apos;Retail Lockbox&apos;)
 ),
 ISCHANGED(CF_Sub_Stage__c),
 OR(
  ISBLANK(CF_Daily_Deposit_Amount__c),
  ISBLANK(CF_Single_Transaction_Amount__c),
  ISBLANK(CF_Daily_Check_Count__c) 
 ) 
)</errorConditionFormula>
        <errorMessage>Please ensure Daily Deposit Amount, Single Transaction Amount, and Daily Check Count are filled out before changing the Sub-Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_RDC_Payment_Portal_Maintenance</fullName>
        <active>true</active>
        <description>This VR fires when added or edited when Next Treasury Review Date is less than TODAY.</description>
        <errorConditionFormula>AND(
CF_Next_Treasury_Review_Date__c &lt; TODAY(),
LLC_BI__Is_Under_Maintenance__c = true,
OR(
ISCHANGED(CF_Daily_Deposit_Amount__c),
ISCHANGED(CF_Requested_ACH_Limit__c)
))</errorConditionFormula>
        <errorMessage>A current Treasury Review must be completed in order to update product limits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_Scanner_Info_RDC_Products</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if &apos;Is Scanner in Stock&apos; fieldd under Scanner Info record for RDC products is not populated.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Fulfillment&apos;),
CF_Is_Scanner_in_Stock_Check__c = false,

OR(
LLC_BI__Product_Reference__r.Name = &apos;Low Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;High Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Mobile RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Remote Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Retail Lockbox&apos;
)
)</errorConditionFormula>
        <errorMessage>Please provide &apos;Is Scanner in Stock?&apos; Information under Scanner Information sub-route to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Fulfillment_Stage_Validation</fullName>
        <active>true</active>
        <description>This VR fires on certain TS products when the stage transitions to fulfillment without having any Treasury Review associated.</description>
        <errorConditionFormula>AND(

ISCHANGED( CF_Sub_Stage__c ),
ISPICKVAL( CF_Sub_Stage__c ,&apos;Doc Prep&apos;),
ISNULL(LLC_BI__Relationship__r.CF_Last_Treasury_Review_Date__c),

OR(
LLC_BI__Product_Reference__r.Name = &apos;ACH Credit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;ACH Debit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Third Party Sender&apos;,
LLC_BI__Product_Reference__r.Name = &apos;High Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Low Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Mobile RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;U-Pay Portal&apos;,
LLC_BI__Product_Reference__r.Name = &apos;I-Collect Portal&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Remote Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Retail Lockbox&apos;

)
)</errorConditionFormula>
        <errorMessage>Treasury Review is pending for this record. Please complete the Review before updating the Sub-stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_For_ACH_Products</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if there is no ACH Company records existing within TS record for ACH products.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
CF_Is_ACH_Company_Rec_Exists__c = false,

OR(
LLC_BI__Product_Reference__r.Name = &apos;ACH Credit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;ACH Debit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Third Party Sender&apos;
)
)</errorConditionFormula>
        <errorMessage>Please add at least 1 ACH Company to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_For_RDC_Products</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if there is no Scanner Info records existing within TS record for RDC products.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
CF_Is_Scanner_Info_Rec_Exists__c  = false,

OR(
LLC_BI__Product_Reference__r.Name = &apos;Low Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;High Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Mobile RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Remote Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Retail Lockbox&apos;
)
)</errorConditionFormula>
        <errorMessage>Please add at least 1 Scanner Information to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_For_Sweep_Prods</fullName>
        <active>true</active>
        <description>Ensure Sweep products have a Primary (Child) Account filled out on Sweep Service record.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
ISBLANK(LLC_BI__Sweep_Service__r.Account_Parent__c),

OR(
LLC_BI__Product_Reference__r.Name = &apos;Zero Balance Sweep&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Target Balance Sweep&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Commercial Loan Sweep&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Money Market Sweep&apos;
)
)</errorConditionFormula>
        <errorMessage>Please provide required Sweep Setup details - Account #(Parent) to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_MS_FS_Products</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if there is no Setup Information - MS records existing within TS record for MS &amp; FS products.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
CF_Is_Setup_Info_MS_Rec_Exists__c  = false,

OR(
LLC_BI__Product_Reference__r.Name = &apos;Check Positive Pay&apos;,
LLC_BI__Product_Reference__r.Name = &apos;ACH Positive Pay&apos;
)
)</errorConditionFormula>
        <errorMessage>Please add at least 1 Setup Information to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_Multi_User_Prod</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if there is no Administrators added within TS record for Multi-User product.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
CF_Is_Administrators_Rec_Exists__c  = false,
LLC_BI__Product_Reference__r.Name = &apos;Multi User&apos;
)</errorConditionFormula>
        <errorMessage>Please add at least 1 Administrator to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_Portal_Deposit</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if there is no Account Access records existing within TS record for RDC &amp; Lockbox, Payment Portal, Management Solutions &amp; Deposit products.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
CF_Is_Account_Access_Rec_Exists__c = false,

OR(
LLC_BI__Product_Reference__r.Name = &apos;U-Pay Portal&apos;,
LLC_BI__Product_Reference__r.Name = &apos;I-Collect Portal&apos;,
LLC_BI__Product_Reference__r.Name = &apos;A/A-Community Ckg&apos;,
LLC_BI__Product_Reference__r.Name = &apos;A/A-Commercial Ckg&apos;,
LLC_BI__Product_Reference__r.Name = &apos;A/A-Small Business Ckg&apos;,
LLC_BI__Product_Reference__r.Name = &apos;A/A-Other&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Low Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;High Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Mobile RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Remote Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Retail Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Multi User&apos;,
LLC_BI__Product_Reference__r.Name = &apos;EDI Addenda Translation&apos;,
LLC_BI__Product_Reference__r.Name = &apos;BAI File Download&apos;,
LLC_BI__Product_Reference__r.Name = &apos;SFTP File Transfer&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Business BillPay&apos;
)
)</errorConditionFormula>
        <errorMessage>Please add at least 1 Account Access to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_Validation</fullName>
        <active>true</active>
        <description>This VR will fire when the user will try to update the TS stage to Onboarding &amp; NAICS Code or CIF # or Billing Account is still blank. 
And Billing Account will be checked only for products other than Credit Cards &amp; Merchant Services</description>
        <errorConditionFormula>AND( 
ISCHANGED(LLC_BI__Stage__c), 
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
OR(
ISBLANK(LLC_BI__Relationship__r.CIF__c),
ISBLANK(LLC_BI__Relationship__r.LLC_BI__Naics_Code__c),

AND(
ISBLANK(CF_Billing_Account_Number__c),
LLC_BI__Product_Reference__r.Name &lt;&gt; &apos;Merchant Services&apos;, 
LLC_BI__Product_Reference__r.Name &lt;&gt; &apos;Credit Card Corporate&apos;, 
LLC_BI__Product_Reference__r.Name &lt;&gt; &apos;Credit Card Purchasing&apos;, 
LLC_BI__Product_Reference__r.Name &lt;&gt; &apos;Credit Card Small Business&apos;
)

))</errorConditionFormula>
        <errorMessage>The CIF #, NAICS Code, and Billing Account must all be completed before moving to the Onboarding stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TS_Onboarding_Stage_WIRE_Products</fullName>
        <active>true</active>
        <description>This VR is used to restrict user to move to Onboarding Stage if there is Wire Account records existing within TS record for Payable Wire Products.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Status__c,&apos;Active&apos;),
ISPICKVAL(LLC_BI__Stage__c,&apos;Onboarding&apos;),
CF_Is_Wire_Account_Rec_Exists__c  = false,
LLC_BI__Product_Reference__r.Name = &apos;Wire Transmission&apos;
)</errorConditionFormula>
        <errorMessage>Please add at least 1 Wire Account to continue to Onboarding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVR_TSupportSpecialist_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(LLC_BI__Status__c,&apos;Open&apos;)),
ISCHANGED(LLC_BI__Stage__c),
ISBLANK(CF_Treasury_Support_Specialist__c) 
)</errorConditionFormula>
        <errorMessage>Please select the Treasury Support Specialist in Team Details route before advancing to Onboarding.</errorMessage>
    </validationRules>
</CustomObject>